Fix FAB overlapping last entries (#3448)

--- a/src/styles/_common.scss
+++ b/src/styles/_common.scss
@@ -207,3 +207,7 @@
     --color-user: var(--color-deleted-account);
   }
 }
+
+.fab-padding-bottom {
+  padding-bottom: 5rem !important;
+}
